fix: align dots on input holder

--- a/src/components/Main/ProductDetails/Mobile/_product-details.scss
+++ b/src/components/Main/ProductDetails/Mobile/_product-details.scss
@@ -31,10 +31,16 @@
 
   .input-holder {
     position: relative;
-    display: flex;
-    align-items: center;
-    border: 1px solid $secondary_bg;
     background-color: $secondary_bg-sec;
+
+    .input-wrapper {
+      display: flex;
+      align-items: center;
+      box-sizing: border-box;
+      width: 100%;
+      height: 100%;
+      border: 1px solid $secondary_bg;
+    }
 
     input {
       text-align: center;
